...
                    android:layout_weight="1"
                    android:text="Title:"
                    android:textSize="16sp"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/jobTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="16sp"
                    android:textColor="#000000" />
            </LinearLayout>
...
                    android:layout_weight="1"
                    android:text="Company:"
                    android:textSize="16sp"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/companyName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="16sp"
                    android:textColor="#000000" />
            </LinearLayout>
...
                    android:layout_weight="1"
                    android:text="City:"
                    android:textSize="16sp"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/city"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="16sp"
                    android:textColor="#000000"/>
            </LinearLayout>
...
                    android:layout_weight="1"
                    android:text="State:"
                    android:textSize="16sp"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/state"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="16sp"
                    android:textColor="#000000"/>
            </LinearLayout>
...
                    android:layout_weight="1"
                    android:text="Yearly Salary ($):"
                    android:textSize="16sp"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/yearlySalary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:inputType="numberDecimal" />
...
                    android:layout_weight="1"
                    android:text="Yearly Bonus ($):"
                    android:textSize="16sp"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/yearlyBonus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:inputType="numberDecimal" />
...
                    android:layout_weight="1"
                    android:text="Tuition Reimbursement ($):"
                    android:textSize="16sp"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/tuitionReimbursement"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:inputType="numberDecimal" />
...
                    android:layout_weight="1"
                    android:text="Health Insurance ($):"
                    android:textSize="16sp"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/healthInsurance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:inputType="numberDecimal" />
...
                    android:layout_weight="1"
                    android:text="Employee Discount ($):"
                    android:textSize="16sp"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/employeeDiscount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:inputType="numberDecimal" />
...
                    android:layout_weight="1"
                    android:text="Child Adoption Assistance ($):"
                    android:textSize="16sp"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/childAdoptionAssistance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:inputType="numberDecimal" />
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingTop="16dp">
            <Button
                android:id="@+id/saveOfferButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Save"
                android:backgroundTint="#9fa8da"
                android:textColor="#000000" />

            <Button
                android:id="@+id/cancelOfferButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="Cancel"
                android:backgroundTint="#CCCCCC"
                android:textColor="#000000" />
...
