<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/tv_app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="JobCompare App"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_marginBottom="24dp"
        />

    <TextView
        android:id="@+id/tv_main_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Main Menu"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_app_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="24dp"
        android:gravity="center"/>

    <Button
        android:id="@+id/btn_enter_current_job"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Enter Current Job"
        app:layout_constraintTop_toBottomOf="@id/tv_main_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btn_add_job_offer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Add Job Offer"
        app:layout_constraintTop_toBottomOf="@id/btn_enter_current_job"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btn_adjust_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Adjust Comparison Settings"
        app:layout_constraintTop_toBottomOf="@id/btn_add_job_offer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btn_compare_jobs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Compare Jobs"
        app:layout_constraintTop_toBottomOf="@id/btn_adjust_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:enabled="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>
