...
                android:layout_weight="1"
                android:text="Salary Weight"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/inputSalaryWeight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="number"
                android:minHeight="48dp"
                android:textSize="16sp"
...
            android:backgroundTint="#8890BC"
            android:text="Save"
            android:textColor="#FFFFFF"
            android:padding="12dp"/>

        <Button
            android:id="@+id/btnCancelSettings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#CCCCCC"
            android:text="Cancel"
            android:textColor="#000000"
...
