...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instruction"
        app:layout_constraintVertical_bias="1.0">

        <ListView
            android:id="@+id/jobListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:choiceMode="multipleChoice"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="1dp"
            android:padding="8dp" />
...
